[package]
name = "tastyworks"
version = "0.14.0"
description = "Unofficial Tastyworks API"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/thetatool/tastyworks-rs"
license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4"
csv = "1.1"
dirs = "3.0"
futures = "0.3"
itertools = "0.9"
lazy_static = "1.4"
log = "0.4"
num-rational = "0.3"
num-traits = { version = "0.2", default-features = false }
options-common = "0.5"
ordered-float = "2.0"
regex = "1.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
tungstenite = "0.11"
url = "2.1"
