[package]
name = "tastyworks"
version = "0.27.0"
description = "Unofficial Tastyworks API"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/thetatool/tastyworks-rs"
license = "MIT"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
dirs = "5.0"
futures = "0.3"
itertools = "0.13"
lazy_static = "1.4"
log = "0.4"
num-rational = "0.3"
num-traits = { version = "0.2", default-features = false }
options-common = "0.8"
ordered-float = "4.2"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
tungstenite = "0.11"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]